# django-bsicon

./: .gitignore  MANIFEST.in  pyproject.toml  setup.cfg
bsicon/static/bsicon/js/: bsicon.js
bsicon/templates/bsicon/: icon_selector.html
src/bsicon/static/bsicon/: bootstrap-icons-metadata.json
