[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "django-bsicon"
version = "0.1.0"
description = "Bootstrap Icons selector for Django Admin"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
{name = "Cuántica Ingeniería y Tecnología S.A.S.", email = "cuantica@bit-wise.org"},
]
keywords = ["django", "bootstrap", "icons", "admin"]
classifiers = [
"Development Status :: 4 - Beta",
"Framework :: Django",
"Framework :: Django :: 4.2",
"Framework :: Django :: 5.0",
"Intended Audience :: Developers",
"License :: OSI Approved :: MIT License",
"Programming Language :: Python :: 3",
"Programming Language :: Python :: 3.8",
"Programming Language :: Python :: 3.9",
"Programming Language :: Python :: 3.10",
"Programming Language :: Python :: 3.11",
"Programming Language :: Python :: 3.12",
"Topic :: Internet :: WWW/HTTP",
"Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/jhoriascos/django-bsicon"
Documentation = "https://github.com/jhoriascos/django-bsicon#readme"
Issues = "https://github.com/jhoriascos/django-bsicon/issues"
Source = "https://github.com/jhoriascos/django-bsicon"

[project.optional-dependencies]
dev = [
"twine>=4.0.2",
"build>=0.10.0",
"django>=4.2",
]

[tool.setuptools]
package-dir = {"" = "bsicon"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["bsicon*"]
exclude = ["tests*", "scripts*"]

[tool.setuptools.package-data]
bsicon = [
"static/bsicon/**/*",
"templates/bsicon/**/*",
"templatetags/*.py",
]