[metadata]
name = django-bsicon
version = 0.1.0
description = Bootstrap Icons selector for Django Admin
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jhoriascos/django-bsicon
author = Cuántica Ingeniería y Tecnología
author_email = cuantica@bit-wise.org
license = MIT
classifiers =
    Framework :: Django
    Framework :: Django :: 4.2
    Programming Language :: Python :: 3

[options]
packages = find:
install_requires =
    Django >= 4.2
include_package_data = True
python_requires = >=3.8

[options.package_data]
bsicon = 
    static/bsicon/**/*
    templates/bsicon/**/*